<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".menu.MenuActivity"
    android:padding="@dimen/spacing_xxxxl"
    >

    <Button
        android:id="@+id/btnDummyList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dummy_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/btnUserList"
        android:layout_marginBottom="@dimen/spacing_xxl"
        />

    <Button
        android:id="@+id/btnUserList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/user_list"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />

    <Button
        android:id="@+id/btnPDFDownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/download_pdf"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnUserList"
        android:layout_marginTop="@dimen/spacing_xxl"
        />

</androidx.constraintlayout.widget.ConstraintLayout>